@@ -5,8 +5,8 @@ use Test::More;
 use Carp;
 $SIG{__DIE__} = \&Carp::confess;
 BEGIN {
-    eval 'use Storable qw(freeze thaw)';
-    plan skip_all => 'Storable cannot be loaded.' if $@;
+    eval 'use Storable 2.05 qw(freeze thaw)';
+    plan skip_all => 'Storable 2.05 or later cannot be loaded.' if $@;
 
     eval 'use B::Deparse 0.61';
     plan skip_all => 'B::Deparse 0.61 or later cannot be loaded.' if $@;
